syntax = "proto3";

package work.sunist.project.alioth.rpc.proto;
option go_package = "./alioth";

message ServiceRegistrationRequest {
  string service = 1;
  int32 port = 2;
  string version = 3;
}

message ServiceRegistrationResponse {
  string service = 1;
  string address = 2;
  string name = 3;
  string version = 4;
}
